# vips-thumbnail-provider

./: Cargo.toml  install.ps1  test_time.rs
libvips_local/: .cargo_vcs_info.json  Cargo.toml  error.json  fix.py
libvips_local/src/: lib.rs
src/: lib.rs
