[package]
name = "thumbnail_generator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
libloading = "0.8.1"
windows-core = "0.58.0"
windows = { version = "0.58.0", features = [
    "implement",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_Foundation",
] }
chrono = "0.4"
