[package]
name = "thumbnail_generator"
version = "0.1.10"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
libloading = "0.9.0"
windows-core = "0.62.2"
windows = { version = "0.62.2", features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
    "Win32_Foundation",
] }
chrono = "0.4.44"
